--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -395,3 +395,14 @@ div.poll {
     padding-left: 16px;
   }
 }
+
+.topic-body:has(button.widget-button.accepted),
+.topic-body:has(.accepted-label) {
+  box-shadow:
+    0px 4px 4px 0px rgba(0, 0, 0, 0.01),
+    0px 3px 3px 0px rgba(0, 0, 0, 0.02),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.04),
+    0px 1px 0px 0px rgba(0, 0, 0, 0.09),
+    0px 0px 0px 1px rgba(0, 0, 0, 0.15),
+    0px 0px 0px 4px #30f2a2;
+}
