--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -18,6 +18,17 @@
     0px 0px 0px 1px rgba(0, 0, 0, 0.15);
 }
 
+.post-stream .topic-post .row:has(button.widget-button.accepted),
+.post-stream .topic-post .row:has(.accepted-label) {
+  box-shadow:
+    0px 4px 4px 0px rgba(0, 0, 0, 0.01),
+    0px 3px 3px 0px rgba(0, 0, 0, 0.02),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.04),
+    0px 1px 0px 0px rgba(0, 0, 0, 0.09),
+    0px 0px 0px 1px rgba(0, 0, 0, 0.15),
+    0px 0px 0px 4px #30f2a2;
+}
+
 .post-stream .topic-post .row:has(.post-notice) {
   background: transparent;
   padding: 0;
